--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -14,8 +14,8 @@
         android:background="@color/colorPrimary"
         android:gravity="center_vertical"
         android:orientation="horizontal"
-        android:layout_marginStart="@dimen/_8sdp"
-        android:layout_marginEnd="@dimen/_8sdp"
+        android:layout_marginStart="0dp"
+        android:layout_marginEnd="0dp"
         app:layout_constraintTop_toTopOf="parent">
         <ImageView
             android:layout_width="@dimen/_25sdp"
@@ -69,6 +69,12 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
                     android:padding="@dimen/_4sdp">
+                    <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/ciclerImageView"
+                    android:layout_width="90dp"
+                    android:layout_height="90dp"
+                    android:src="@drawable/defaultusericon"
+                    />
 
                     <TextView
                         android:layout_width="match_parent"
@@ -78,7 +84,7 @@
                         android:layout_marginEnd="@dimen/_8sdp"
                         android:fontFamily="@font/ubuntu_regular"
                         android:includeFontPadding="false"
-                        android:text="First name"
+                        android:text="Name"
                         android:textColor="@color/colorPrimaryText"
                         android:textSize="@dimen/_11ssp"
                         />
@@ -100,35 +106,7 @@
                         android:includeFontPadding="false"
                         />
 
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="@dimen/_8sdp"
-                        android:layout_marginTop="@dimen/_8sdp"
-                        android:layout_marginEnd="@dimen/_8sdp"
-                        android:fontFamily="@font/ubuntu_regular"
-                        android:includeFontPadding="false"
-                        android:text="Last name"
-                        android:textColor="@color/colorPrimaryText"
-                        android:textSize="@dimen/_11ssp"
-                        />
-                    <EditText
-                        android:layout_width="match_parent"
-                        android:layout_height="@dimen/_30sdp"
-                        android:id="@+id/inputLastName"
-                        android:layout_marginStart="@dimen/_8sdp"
-                        android:layout_marginEnd="@dimen/_8sdp"
-                        android:background="@null"
-                        android:fontFamily="@font/ubuntu_regular"
-                        android:hint="deo"
-                        android:imeOptions="actionNext"
-                        android:inputType="text"
-                        android:textColor="@color/colorPrimaryText"
-                        android:textColorHint="@color/colorHintText"
-                        android:textSize="@dimen/_13ssp"
-                        android:importantForAutofill="no"
-                        android:includeFontPadding="false"
-                        />
+
 
                     <TextView
                         android:layout_width="match_parent"
