--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -96,7 +96,7 @@
                         android:layout_marginEnd="@dimen/_8sdp"
                         android:background="@null"
                         android:fontFamily="@font/ubuntu_regular"
-                        android:hint="alic"
+                        android:hint="abcd"
                         android:imeOptions="actionNext"
                         android:inputType="text"
                         android:textColor="@color/colorPrimaryText"
@@ -218,12 +218,6 @@
                     android:textSize="@dimen/_13ssp"
                     app:layout_constraintTop_toBottomOf="@id/cardSignin"
                     />
-                <ProgressBar
-                    android:id="@+id/signUpProgressBar"
-                    android:layout_width="@dimen/_25sdp"
-                    android:layout_height="@dimen/_25sdp"
-                    android:layout_gravity="center"
-                    android:visibility="invisible" />
             </FrameLayout>
             <TextView
                 android:layout_width="match_parent"
